--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -54,16 +54,24 @@
       <h4 class="text-muted" lang="en">Update log</h4>
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
-        2022-07-31(v3.4.5)
-        <ul>
-          <li>製造会社の訳名を調整。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
         <li class="list-group-item border border-primary">
+          2022-08-16(v3.5.0)
+          <ul>
+            <li>ジェネレータ：製造会社選択を調整。</li>
+            <li>新しい駅：<var>溧水</var>、<var>宁郷</var>、<var>宜賓西</var>。</li>
+            <li>ファイル版本番号は <code>2022e</code> にする。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
+          2022-07-31(v3.4.5)
+          <ul>
+            <li>製造会社の訳名を調整。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-03(v3.4.3)
           <ul>
-            <li>新しい駅：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
+            <li>新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>鄭州航空港</var>。</li>
             <li>一部駅の情報を調整。</li>
             <li>一部データの失効原因を明らかにした。</li>
           </ul>
@@ -71,7 +79,7 @@
         <li class="list-group-item">
           2022-06-19(v3.4.2)
           <ul>
-            <li>新しい駅：<var>滑浚</var>、<var>新乡南</var>。</li>
+            <li>新しい駅：<var>滑浚</var>、<var>新郷南</var>。</li>
             <li>一部駅の情報を調整。</li>
             <li>ファイル版本番号は <code>2022d</code> にする。</li>
             <li>記録した駅601個、機器1605個達成。</li>
@@ -108,7 +116,7 @@
           <ul>
             <li>券紙名を調整、北京オリムピック限定券紙を追加。</li>
             <li>バーグを修復。</li>
-            <li>新しい駅：<var>繁昌西</var>、<var>明港东</var>、<var>唐山</var>、<var>湾沚南</var>、<var>芜湖南</var></li>
+            <li>新しい駅：<var>繁昌西</var>、<var>明港東</var>、<var>唐山</var>、<var>湾沚南</var>、<var>芜湖南</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -125,7 +133,7 @@
           <ul>
             <li>一部の翻訳を微調整。</li>
             <li>新しい駅：<var>阜寧東</var>、<var>惠州北</var></li>
-            <li>新しい駅組：<var>郑阜高速線(線路)</var></li>
+            <li>新しい駅組：<var>鄭阜高速線(線路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -179,6 +187,7 @@
             <li>普通の更新です。</li>
           </ul>
         </li>
+        <li class="list-group-item">
           2021-10-24(v3.1.1) 1024 Programmers' Day!
           <ul>
             <li>貢献統計の方法を更新。</li>
@@ -302,7 +311,7 @@
             <li>「卒業季」ですから、更新頻度はやや下がった。</li>
             <li>修改了部分标签的格式。</li>
             <li>提前维护了台州西站的更名。</li>
-            <li>新しい駅：<var>九台</var>、<var>临沂</var>、<var>莆田</var>、<var>中山北</var></li>
+            <li>新しい駅：<var>九台</var>、<var>臨沂</var>、<var>莆田</var>、<var>中山北</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -389,7 +398,7 @@
           2021-03-29(v2.3.2)
           <ul>
             <li>
-              新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感東</var>、<var>延慶</var>
+              新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良郷</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感東</var>、<var>延慶</var>
             </li>
             <li>
               新しい駅組：<var>京津城際線(線路)</var>
@@ -453,7 +462,7 @@
         <li class="list-group-item">
           2021-02-01(v2.1.2):
           <ul>
-            <li>新しい駅：三间房、乌伊岭、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗乡、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香兰、斉斉哈爾、斉斉哈爾南</li>
+            <li>新しい駅：三间房、乌伊岭、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗郷、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香兰、斉斉哈爾、斉斉哈爾南</li>
             <li>新しい「駅資料」と「駅歴史」欄。</li>
           </ul>
         </li>
@@ -487,12 +496,12 @@
         <li class="list-group-item">
           2020-12-12(v2.0.rc1):
           <ul>
-            <li>新介绍页面，更新Mdict版。</li>
+            <li>新紹介ページ、Mdict版更新。</li>
             <li>「票号标注」タグを作成。</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2020-12-02: 新介绍页面，清河站探访，缩小网页体积。
+          2020-12-02: 新紹介ページ、清河站探访、缩小网页体积。
         </li>
         <li class="list-group-item">
           2020-05-10: 初公開のリリース。
