--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -40,7 +40,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022c2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年5月22日版本</a></p>
+    <p><a href="./tktMach2022d2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年7月30日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
   </div>
   <div class="container">
@@ -68,9 +68,9 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>54</td><td>63</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>48</td><td>66</td></tr>
-        <tr><td>3</td><td>郑州</td><td>46</td><td>59</td></tr>
-        <tr><td>4</td><td>南京南</td><td>45</td><td>52</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>49</td><td>67</td></tr>
+        <tr><td>3</td><td>郑州</td><td>46</td><td>62</td></tr>
+        <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
         <tr><td>5</td><td>北京南</td><td>38</td><td>42</td></tr>
         <tr><td>6</td><td>杭州东</td><td>32</td><td>38</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
@@ -110,6 +110,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-08-16(v3.5.0)
+          <ul>
+            <li>生成器：完善厂商名称选择器。</li>
+            <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
+            <li>更改文件名版本号为<code>2022e</code>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-31(v3.4.5)
           <ul>
             <li>完善厂商名称翻译。</li>
@@ -134,15 +142,6 @@
           <ul>
             <li>常规更新。修复了部分错误的提示。</li>
             <li>更改文件名版本号为<code>2022c</code></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          …… 2022-02-19(v3.3.0)
-          <ul>
-            <li>移除部分装饰，增加、调整部分翻译。</li>
-            <li>调整局部布局。</li>
-            <li>新增车站：<var>重庆南</var>、<var>重庆西</var>、<var>丹江口</var>、<var>惠环</var>、<var>扬州</var></li>
-            <li>更改文件名版本号为<code>2022b</code></li>
           </ul>
         </li>
         <li class="list-group-item">
