--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-08-16(v3.5.0)
+          <ul>
+            <li>生成器：完善厂商名称选择器。</li>
+            <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
+            <li>更改文件名版本号为<code>2022e</code>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-31(v3.4.5)
           <ul>
             <li>完善厂商名称翻译。</li>
@@ -186,6 +194,7 @@
             <li>常规更新。</li>
           </ul>
         </li>
+        <li class="list-group-item">
           2021-10-24(v3.1.1) 1024 Programmers' Day!
           <ul>
             <li>修改了贡献者的统计方式。</li>
