--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,13 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-08-31(v3.5.1)
+          <ul> 
+            <li>日付表示は更新。</li>
+            <li>新しい駅：<var>板塘</var>、<var>谷山</var>、<var>観沙嶺</var>、<var>懐柔北</var>、<var>荆門</var>、<var>深圳</var>、<var>先鋒</var>、<var>昭通</var>。<var>仲愷</var> 駅の情報は更新されました。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-08-16(v3.5.0)
           <ul>
             <li>ジェネレータ：製造会社選択を調整。</li>
@@ -71,7 +78,7 @@
         <li class="list-group-item">
           2022-07-03(v3.4.3)
           <ul>
-            <li>新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>鄭州航空港</var>。</li>
+            <li>新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>鄭州航空港</var>。</li>
             <li>一部駅の情報を調整。</li>
             <li>一部データの失効原因を明らかにした。</li>
           </ul>
@@ -235,7 +242,7 @@
         <li class="list-group-item">
           2021-08-30(v3.0.4)
           <ul>
-            <li>新しい駅：<var>农安</var>、<var>平旺</var></li>
+            <li>新しい駅：<var>農安</var>、<var>平旺</var></li>
           </ul>
         </li>
         <li class="list-group-item">
