--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -68,11 +68,11 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>54</td><td>63</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>49</td><td>67</td></tr>
-        <tr><td>3</td><td>郑州</td><td>46</td><td>62</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>50</td><td>68</td></tr>
+        <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
         <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
         <tr><td>5</td><td>北京南</td><td>38</td><td>42</td></tr>
-        <tr><td>6</td><td>杭州东</td><td>32</td><td>38</td></tr>
+        <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
         <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
         <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
@@ -110,38 +110,18 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-08-31(v3.5.1)
+          <ul> 
+            <li>修改了默认的日期表示方式。</li>
+            <li>新增车站：<var>板塘</var>、<var>谷山</var>、<var>观沙岭</var>、<var>怀柔北</var>、<var>荆门</var>、<var>深圳</var>、<var>先锋</var>、<var>昭通</var>。<var>仲恺</var> 站更新了信息。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-08-16(v3.5.0)
           <ul>
             <li>生成器：完善厂商名称选择器。</li>
             <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
             <li>更改文件名版本号为<code>2022e</code>。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2022-07-31(v3.4.5)
-          <ul>
-            <li>完善厂商名称翻译。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2022-07-17(v3.4.4)
-          <ul>
-            <li>新增车站：<var>淮阳南</var>、<var>沈丘北</var>、<var>周口</var>、<var>周口东</var>。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2022-07-03(v3.4.3)
-          <ul>
-            <li>新增车站：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵县</var>、<var>濮阳东</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
-            <li>部分车站信息调整。</li>
-            <li>明确了部分数据的失效原因。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          …… 2022-04-24(v3.4.0)
-          <ul>
-            <li>常规更新。修复了部分错误的提示。</li>
-            <li>更改文件名版本号为<code>2022c</code></li>
           </ul>
         </li>
         <li class="list-group-item">
