--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,12 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-09-10(v3.5.2) 中秋の節
+          <ul>
+            <li>一部の内容を調整。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-08-31(v3.5.1)
           <ul> 
             <li>日付表示は更新。</li>
