--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -110,6 +110,12 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-09-10(v3.5.2) 中秋节、教师节快乐！
+          <ul>
+            <li>常规更新。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-08-31(v3.5.1)
           <ul> 
             <li>修改了默认的日期表示方式。</li>
