--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,8 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-09-10(v3.5.2) 中秋节、教师节快乐！
+          <ul>
+            <li>常规更新。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-08-31(v3.5.1)
-          <ul> 
+          <ul>
             <li>修改了默认的日期表示方式。</li>
             <li>新增车站：<var>板塘</var>、<var>谷山</var>、<var>观沙岭</var>、<var>怀柔北</var>、<var>荆门</var>、<var>深圳</var>、<var>先锋</var>、<var>昭通</var>。<var>仲恺</var> 站更新了信息。</li>
           </ul>
