--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-10-03(v3.5.3) 国庆节快乐！
+          <ul>
+            <li>更新预告：预计明年初将发布下一个大版本，新版本将完全重建整个网页架构并提供数据报文服务，敬请期待！</li>
+            <li>新增车站：<var>北京丰台</var>、<var>海口</var>、<var>怀柔</var>、<var>怀柔南</var>、<var>茂名</var>、<var>琼海</var>、<var>三家店</var>、<var>三水北</var>、<var>三水南</var>、<var>深圳东</var>、<var>雁栖湖</var>。</li>
+            <li>修复了MDict版本部分图片无法显示的问题。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-09-10(v3.5.2) 中秋节、教师节快乐！
           <ul>
             <li>常规更新。</li>
