--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -38,7 +38,7 @@
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="./img/ccbync.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">クリエイティブ・コモンズ 表示 - 非営利 4.0 国際 ライセンス</a>の下に提供されています。
   </div>
   <div class="container">
-    项目网址：
+    企画公式サイト：
     <a href="https://clzls.github.io/rail/tktmach_latest.html">
       https://clzls.github.io/rail/tktmach_latest.html
     </a>
@@ -55,6 +55,14 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-10-03(v3.5.3)
+          <ul>
+            <li>更新予報：来年、次の大版本（メージャーバージョン）の公開を予定。Web構造を再構築し、データグラムサービスを提供することを予定。お楽しみに！（日本語翻訳の公開時間は未だ決まっていない）</li>
+            <li>新しい駅：<var>北京豐台</var>、<var>海口</var>、<var>懷柔</var>、<var>懷柔南</var>、<var>茂名</var>、<var>瓊海</var>*、<var>三家店</var>、<var>三水北</var>、<var>三水南</var>、<var>深圳東</var>、<var>雁栖湖</var>。<span class="text-muted">* 難読漢字</span></li>
+          </ul>
+          <li>MDict版に一部の不具合を修正。</li>
+        </li>
+        <li class="list-group-item">
           2022-09-10(v3.5.2) 中秋の節
           <ul>
             <li>一部の内容を調整。</li>
