--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -40,7 +40,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022d2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年7月30日版本</a></p>
+    <p><a href="./tktMach2022e2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年10月3日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
   </div>
   <div class="container">
@@ -67,11 +67,11 @@
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>长春</td><td>54</td><td>63</td></tr>
+        <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
         <tr><td>2</td><td>郑州东</td><td>50</td><td>68</td></tr>
         <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
         <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
-        <tr><td>5</td><td>北京南</td><td>38</td><td>42</td></tr>
+        <tr><td>5</td><td>北京南</td><td>39</td><td>44</td></tr>
         <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
         <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
@@ -98,7 +98,7 @@
     <script>
       tktpaperdesc = document.getElementById('tktpaperdesc');
       getTktRange().forEach(element => {
-        tktpaperdesc.innerHTML += "<p>代码" + element.toString() + "：" + getTktType(element) + "</p>";});
+        tktpaperdesc.innerHTML+="<p>代码"+element+"："+getTktType(element)+"</p>"});
     </script>
     <article class="container">
       <h3>版本迭代史</h3>
@@ -110,20 +110,15 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-09-10(v3.5.2) 中秋节、教师节快乐！
+          2022-10-03(v3.5.3) 国庆节快乐！
           <ul>
-            <li>常规更新。</li>
+            <li>更新预告：预计明年初将发布下一个大版本，新版本将拥有全新的网页架构并提供数据报文服务，敬请期待！</li>
+            <li>新增车站：<var>北京丰台</var>、<var>海口</var>、<var>怀柔</var>、<var>怀柔南</var>、<var>茂名</var>、<var>琼海</var>、<var>三家店</var>、<var>三水北</var>、<var>三水南</var>、<var>深圳东</var>、<var>雁栖湖</var>。</li>
+            <li>修复了MDict版本部分图片无法显示的问题。</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2022-08-31(v3.5.1)
-          <ul> 
-            <li>修改了默认的日期表示方式。</li>
-            <li>新增车站：<var>板塘</var>、<var>谷山</var>、<var>观沙岭</var>、<var>怀柔北</var>、<var>荆门</var>、<var>深圳</var>、<var>先锋</var>、<var>昭通</var>。<var>仲恺</var> 站更新了信息。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2022-08-16(v3.5.0)
+          …… 2022-08-16(v3.5.0)
           <ul>
             <li>生成器：完善厂商名称选择器。</li>
             <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
@@ -141,35 +136,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          ……
-          2021-03-15(v2.3.0pre OR v2.2.3)
-          <ul>
-            <li>新增车站：<var>孝感</var></li>
-            <li>移除了过时的车站联合体。</li>
-            <li>试运行：票机功能信息。以<var>北京西</var>、<var>上海</var>站某些票机为例。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-02-18(v2.2.0pre OR v2.1.3):
-          <ul>
-            <li>新增车站：<var>北京朝阳</var>、<var>长治东</var>、<var>丹阳</var>、<var>晋城</var>、<var>晋城东</var>、<var>汤逊湖</var>、<var>铜陵</var>、<var>西华</var>、<var>鄢陵</var>。出于维护历史记录的需要新增的有：<var>清华园</var></li>
-            <li>维护了车站联合体的引导信息。首批引入的车站联合体有：<var>北京(城市)</var>、<var>北京(其他车站)</var>、<var>重庆(城市)</var>、<var>福建福州(城市)</var>、<var>河南郑州(城市)</var>、<var>河南郑州(同城站)</var>、<var>湖北武汉(城市)</var>、<var>湖北武汉(同城站)</var>、<var>上海(城市)</var>。</li>
-            <li>对车站列表进行重排，尽量按照字典序排列。</li>
-            <li>于 2021-02-14 达成收录 1000 个位置的成就！</li>
-            <li>达成收录 416 个车站的成就！</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-01-16(v2.1.0):
-          <ul>
-            <li>现在机位信息可以带图片了。支持sm.ms图床或本地图片。</li>
-            <li>版式微调，浏览器互动优化。</li>
-            <li>车站更名处理：对部分已更名车站的信息进行整理。</li>
-            <li>重新对票纸类型进行了编码。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-01-01(v2.0.0):
+          …… 2021-01-01(v2.0.0):
           <ul>
             <li>引入“红改蓝”、“票机号码与终端号不符”标签。</li>
             <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
