--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -178,7 +178,9 @@
             <option value="45" data-red="1">红票（宋体左对齐）票纸</option>
             <option value="59" data-red="1">不明红票票纸</option>
           </optgroup>
-          <option value="255" data-red="2" selected>未知票纸</option>
+          <optgroup label="其他" data-red="2">
+            <option value="255" data-red="2" selected>未知票纸</option>
+          </optgroup>
         </select>
       </div>
       <div class="form-group">
