--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-10-16(v3.6.0)
+          <ul>
+            <li>修复部分错误。</li>
+            <li>新增车站：<var>三原</var>、<var>阎良</var>。</li>
+            <li>更改文件名版本号为<code>2022f</code>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-10-03(v3.5.3) 国庆节快乐！
           <ul>
             <li>更新预告：预计明年初将发布下一个大版本，新版本将完全重建整个网页架构并提供数据报文服务，敬请期待！</li>
