--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -3,22 +3,29 @@
 
 <head>
   <title>运转大数据 ｜ 关于我们</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keyword" content="运转大数据" />
-  <link rel="stylesheet" href="./js/bootstrap.min.css">
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="keyword" content="运转大数据">
+  <meta name="description" content="运转大数据，售票机使用体验">
+  <!--Polyfills BEGIN-->
+  <script nomodule src="https://cdn.staticfile.org/es5-shim/4.6.7/es5-shim.min.js"></script>
+  <script nomodule src="https://cdn.staticfile.org/es5-shim/4.6.7/es5-sham.min.js"></script>
+  <!--Polyfills END-->
+  <!--<link rel="stylesheet" href="./js/bootstrap.min.css">-->
+  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/brands.min.css">
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js" defer></script>
   <script src="./js/tkt_type.min.js"></script>
   <!-- Nim BEGIN -->
   <link rel="preload" href="./js/aboutPage.min.js" type="text/javascript" as="script">
   <link rel="preload" href="./js/aboutPageData.min.js" type="text/javascript" as="script">
   <!-- Nim END -->
   <style>
-    body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}.heimu,.heimu a{background-color:#252525;color:#252525}a.promo{word-break: break-all}
+    body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score .s0lt1,p.score .s1lt1{color:red!important}p.score .s1lt2,p.score .s2lt1,p.score .s2lt2,p.score .s3lt1,p.score .s4lt2{color:#ff0!important}p.score .s4lt1,p.score .s5lt1{color:#3f3!important}.heimu,.heimu a{background-color:#252525;color:#252525}a.promo{word-break: break-all}
   </style>
 </head>
 
@@ -39,134 +46,151 @@
     </ul>
   </nav>
   <div class="container head">
-    <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022e2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年10月3日版本</a></p>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
+    <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
+    <p><a href="./tktMach2022e2.mdx" download><i class="fas fa-download"></i>下载词典 - 2022年10月3日版本</a></p>
   </div>
   <div class="container">
     项目网址：
     <a href="https://clzls.github.io/rail/tktmach_latest.html" class="promo">
       clzls.github.io/rail/tktmach_latest.html
     </a>
-    <p></p>
-    票号前十位包含以下信息：
-    <p>5位车站号+2位售票方式号+3位售票窗口号</p>
-    <p>售票机的窗口号可以从屏幕最底下获得。售票窗口的窗口号一般悬挂在窗口上，除非有特殊声明。</p>
   </div>
-  <div class="container">
-    <h1>运转大数据 ｜ 关于我们</h1>
-    <h2 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ) | About us</h2>
+  <div class="container my-3">
+    <h1>
+      运转大数据
+      <small class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</small>
+    </h1>
+    <h2>
+      关于我们
+      <small class="text-muted" lang="en">About us</small>
+    </h2>
     <p><span>一个小小的个人网页，正在建设中。所有数据均为热心网友调查获得，且为保护隐私，日期做过技术处理。由于机器情况、实地情况的复杂性，对数据的准确性不作任何保证。使用数据时注意遵守法律法规以及授权协议。请注意阅读各网页的通知，所有首页的声明均视为已传达给您。如有疑问，请联系管理员（或前往<a href="#plq">评论区</a>）。</span><br>
     <span class="text-muted" lang="en">A brunch of personal web pages, under construction. All data were granted by users and some sensitive information is mangled to protect privacy. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling. When English translation is not available, please refer to the Chinese version. Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
     <!-- Person info - React -->
-    <script src="./js/aboutPageData.min.js"></script>
-    <div class="card" id="react_container_persons"></div>
-    <script src="./js/aboutPage.min.js"></script>
-    <br/>
-    <div class="container">
-      <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
-      <table class="table">
-        <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>50</td><td>68</td></tr>
-        <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
-        <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
-        <tr><td>5</td><td>北京南</td><td>39</td><td>44</td></tr>
-        <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
-        <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
-        <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
-        <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
-        <tr><td>10</td><td>南京</td><td>23</td><td>27</td></tr>
-      </table>
-    </div>
-    <div class="container">
-      <h3>票机评价标准：</h3>
-      <ul class="list-group">
-        <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
-        <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等。</li>
-        <li class="list-group-item list-group-item-warning">2分/略差：略有模糊，略有不整齐；或两年后褪色明显的。</li>
-        <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。</li>
-        <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。</li>
-        <li class="list-group-item list-group-item-success">5分/佳：两年仍清晰锐利，无白条、缺失等。（特殊等级）</li>
-        <li class="list-group-item">红色软质车票由于其抗褪色特性，可以视情况加分。（系统自动完成）</li>
-        </ol>
-    </div>
-    <div class="container">
-      <h3>常见票纸类型</h3>
-      <article id="tktpaperdesc" class="container"></article>
-    </div>
-    <script>
-      tktpaperdesc = document.getElementById('tktpaperdesc');
-      getTktRange().forEach(element => {
-        tktpaperdesc.innerHTML+="<p>代码"+element+"："+getTktType(element)+"</p>"});
-    </script>
-    <article class="container">
-      <h3>版本迭代史</h3>
-      <h4 class="text-muted" lang="ja">Update log 変更履歴（最近）</h4>
-      <p>内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
-      <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
-      <p>这是简略的更新日志。更详尽的信息可参考<a class="link" href="helpUpdatehist.html">专门页面</a></p>
-      <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
-      <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
-      <ul class="list-group">
-        <li class="list-group-item border border-primary">
-          2022-10-16(v3.6.0)
-          <ul>
-            <li>修复部分错误。</li>
-            <li>新增车站：<var>三原</var>、<var>阎良</var>。</li>
-            <li>更改文件名版本号为<code>2022f</code>。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2022-10-03(v3.5.3) 国庆节快乐！
-          <ul>
-            <li>更新预告：预计明年初将发布下一个大版本，新版本将拥有全新的网页架构并提供数据报文服务，敬请期待！</li>
-            <li>新增车站：<var>北京丰台</var>、<var>海口</var>、<var>怀柔</var>、<var>怀柔南</var>、<var>茂名</var>、<var>琼海</var>、<var>三家店</var>、<var>三水北</var>、<var>三水南</var>、<var>深圳东</var>、<var>雁栖湖</var>。</li>
-            <li>修复了MDict版本部分图片无法显示的问题。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          …… 2022-08-16(v3.5.0)
-          <ul>
-            <li>生成器：完善厂商名称选择器。</li>
-            <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
-            <li>更改文件名版本号为<code>2022e</code>。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          …… 2021-07-31(v3.0.0)
-          <ul>
-            <li>新版本正式发布</li>
-            <li>测试日语翻译上线</li>
-            <li>文案细节配合翻译进行调整</li>
-            <li>新增车站：<var>安康</var>、<var>白河东</var>、<var>白河县</var>、<var>博克图</var>、<var>承德南</var>、<var>谷城</var>、<var>满归</var>、<var>十堰东</var>、<var>图里河</var>、<var>乌尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊图里河</var></li>
-            <li>车站总数达到537个，机器数量1364台。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          …… 2021-01-01(v2.0.0):
-          <ul>
-            <li>引入“红改蓝”、“票机号码与终端号不符”标签。</li>
-            <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
-            <li>车站基础信息聚合显示。加入少量拼音数据。</li>
-            <li lang="en">Pinyin information for non Mandarin users. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling.</li>
-            <li lang="ja">中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2020-05-10: 首个公开的版本。
-        </li>
-      </ul>
-    </div>
+    <script src="./js/aboutPageData.min.js" defer></script>
+    <article class="card" id="react_container_persons"></article>
+    <script src="./js/aboutPage.min.js" defer></script>
   </div>
+  <div class="container my-3">
+    <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
+    <table class="table">
+      <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
+      <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
+      <tr><td>2</td><td>郑州东</td><td>50</td><td>68</td></tr>
+      <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
+      <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
+      <tr><td>5</td><td>北京南</td><td>39</td><td>44</td></tr>
+      <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
+      <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
+      <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
+      <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
+      <tr><td>10</td><td>南京</td><td>23</td><td>27</td></tr>
+    </table>
+  </div>
+  <div class="container my-3">
+    <h2>
+      票机评价标准
+      <small class="text-muted" lang="en">Quality Evaluation Criterion</small>
+    </h2>
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
+      <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等。</li>
+      <li class="list-group-item list-group-item-warning">2分/略差：略有模糊，略有不整齐；或两年后褪色明显的。</li>
+      <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。</li>
+      <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。</li>
+      <li class="list-group-item list-group-item-success">5分/佳：两年仍清晰锐利，无白条、缺失等。（特殊等级）</li>
+      <li class="list-group-item">红色软质车票由于其抗褪色特性，可以视情况加分。（系统自动完成）</li>
+    </ul>
+  </div>
+  <article id="tktpaperdesc" class="container">
+    <h2>常见票纸类型 <small class="text-muted" lang="en">Frequently seen paper types</small></h2>
+    <h3>蓝票 <small class="text-muted" lang="en">Blue papers</small></h3>
+    <h3>红票 <small class="text-muted" lang="en">Red papers</small></h3>
+  </article>
+  <script>
+    var tktpaperdesc = document.getElementById("tktpaperdesc");
+    var desc = tktpaperdesc.getElementsByTagName('h3');
+    function doE(e, t) {
+      var p = document.createElement("p");
+      p.innerHTML = "代码"+e+"："+getTktType(e);
+      tktpaperdesc.insertBefore(p, t);
+    }
+    forEach=function(t,e){for(i=0;i<t.length;i++)e(t[i])};
+    a1=function(e){doE(e, desc[1])};
+    a2=function(e){doE(e, null)};
+    forEach(getTktRangeBlue(),a1);
+    forEach(getTktRangeRed(),a2);
+  </script>
+  <article class="container">
+    <h2>
+      版本迭代史
+      <small class="text-muted" lang="ja">Update log 変更履歴（最近）</small>
+    </h2>
+    <p>内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
+    <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
+    <p>这是简略的更新日志。更详尽的信息可参考<a class="link" href="helpUpdatehist.html">专门页面</a></p>
+    <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
+    <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
+    <ul class="list-group">
+      <li class="list-group-item border border-primary">
+        2022-10-30 (v3.6.1)
+        <ul>
+          <li>优化部分代码。</li>
+          <li>新增车站：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石东</var>、<var>陆良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄阳东</var>、<var>祥云</var>、<var>小湾东</var>、<var>钟祥</var>、<var>遵义</var>。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
+        2022-10-16 (v3.6.0)
+        <ul>
+          <li>修复部分错误。</li>
+          <li>新增车站：<var>三原</var>、<var>阎良</var>。</li>
+          <li>更改文件名版本号为<code>2022f</code>。</li>
+          <li>车站总数达到 639 个，机器数量达到 1736 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
+        …… 2022-08-16(v3.5.0)
+        <ul>
+          <li>生成器：完善厂商名称选择器。</li>
+          <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
+          <li>更改文件名版本号为<code>2022e</code>。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
+        …… 2021-07-31(v3.0.0)
+        <ul>
+          <li>新版本正式发布</li>
+          <li>测试日语翻译上线</li>
+          <li>文案细节配合翻译进行调整</li>
+          <li>新增车站：<var>安康</var>、<var>白河东</var>、<var>白河县</var>、<var>博克图</var>、<var>承德南</var>、<var>谷城</var>、<var>满归</var>、<var>十堰东</var>、<var>图里河</var>、<var>乌尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊图里河</var></li>
+          <li>车站总数达到537个，机器数量1364台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
+        …… 2021-01-01(v2.0.0):
+        <ul>
+          <li>引入“红改蓝”、“票机号码与终端号不符”标签。</li>
+          <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
+          <li>车站基础信息聚合显示。加入少量拼音数据。</li>
+          <li lang="en">Pinyin information for non Mandarin users. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling.</li>
+          <li lang="ja">中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
+        2020-05-10: 首个公开的版本。
+      </li>
+    </ul>
+  </article>
   <a id="plq"></a>
-  <script src="https://unpkg.com/valine/dist/Valine.min.js"></script>
   <div id="vcomments" class="container"></div>
   <script>
-      new Valine({el: '#vcomments',appId: 'VY3q0lDUnkBNoCLciW7W4tCC-gzGzoHsz',appKey: 'RUb9iXuGiAK80y4rc9J2zN65', visitor: true, enableQQ: true, requiredFields: ['nick']})
+      function _ty241(){new Valine({el: '#vcomments',appId: 'VY3q0lDUnkBNoCLciW7W4tCC-gzGzoHsz',appKey: 'RUb9iXuGiAK80y4rc9J2zN65', visitor: true, enableQQ: true, requiredFields: ['nick']})}
   </script>
-  <a href="https://xa.shinobi.jp/bin/gg?190138801" target="_blank"><img src="https://xa.shinobi.jp/bin/ll?190138801" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="https://img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span>
-  <footer class="container">
+  <script src="https://unpkg.com/valine/dist/Valine.min.js" async onload="_ty241()"></script>
+  <div class="container my-2">
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png"></a><br>本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
+  </div>
+  <footer class="container my-2">
     <small class="text-muted">文中各商标为对应公司的资产。</small>
   </footer>
 </body>
