--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -34,39 +34,52 @@
       </li>
     </ul>
   </nav>
-  <div class="container head">
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="./img/ccbync.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">クリエイティブ・コモンズ 表示 - 非営利 4.0 国際 ライセンス</a>の下に提供されています。
-  </div>
   <div class="container">
-    企画公式サイト：
-    <a href="https://clzls.github.io/rail/tktmach_latest.html">
-      https://clzls.github.io/rail/tktmach_latest.html
-    </a>
-  </div>
-  <div class="container">
-    <h2>運転マスデータ</h2>
-    <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</h4>
+    <h1>
+      運転マスデータ
+      <small class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</small>
+    </h1>
     <p>
-    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="./tktAbout.html#plq">comment</a> us.</span></p>
-    <br/>
-    <article class="container">
-      <h3>変更履歴</h3>
-      <h4 class="text-muted" lang="en">Update log</h4>
-      <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
+      企画公式サイト：
+      <a href="https://clzls.github.io/rail/tktmach_latest.html">
+        https://clzls.github.io/rail/tktmach_latest.html
+      </a>
+    </p>
+    <p lang="en">
+      A brunch of personal web pages, under construction... Any question please
+        contact Kina or just <a href="./tktAbout.html#plq">comment</a> us.
+    </p>
+  </div>
+  <article class="container">
+    <h2>
+      変更履歴
+      <small class="text-muted" lang="en">Update log</small>
+    </h2>
+    <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-10-16(v3.6.0)
+          2022-10-30 (v3.6.1)
+          <ul>
+            <li>コードを調整。</li>
+            <li>新しい駅：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石東</var>、<var>陸良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄阳東</var>、<var>祥云</var>、<var>小湾東</var>、<var>鐘祥</var>、<var>遵義</var>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
+          2022-10-16 (v3.6.0)
           <ul>
             <li>一部の不具合が修正。</li>
             <li>新しい駅：<var>三原</var>、<var>閻良</var>。</li>
             <li>ファイル版本番号は <code>2022f</code> にする。</li>
+            <li>記録した駅 639 個、機器 1736 個達成。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2022-10-03(v3.5.3)
           <ul>
             <li>更新予報：来年、次の大版本（メージャーバージョン）の公開を予定。Web構造を再構築し、データグラムサービスを提供することを予定。お楽しみに！（日本語翻訳の公開時間は未だ決まっていない）</li>
-            <li>新しい駅：<var>北京豐台</var>、<var>海口</var>、<var>懷柔</var>、<var>懷柔南</var>、<var>茂名</var>、<var>瓊海</var>*、<var>三家店</var>、<var>三水北</var>、<var>三水南</var>、<var>深圳東</var>、<var>雁栖湖</var>。<span class="text-muted">* 難読漢字</span></li>
+          <li>
+            新しい駅：<var>北京豐台</var>、<var>海口</var>、<var>懷柔</var>、<var>懷柔南</var>、<var>茂名</var>、<var>瓊海</var>*、<var>三家店</var>、<var>三水北</var>、<var>三水南</var>、<var>深圳東</var>、<var>雁栖湖</var>。<span
+              class="text-muted">* 難読漢字</span></li>
             <li>MDict版に一部の不具合を修正。</li>
           </ul>
         </li>
@@ -80,7 +93,9 @@
           2022-08-31(v3.5.1)
           <ul> 
             <li>日付表示は更新。</li>
-            <li>新しい駅：<var>板塘</var>、<var>谷山</var>、<var>観沙嶺</var>、<var>懐柔北</var>、<var>荆門</var>、<var>深圳</var>、<var>先鋒</var>、<var>昭通</var>。<var>仲愷</var> 駅の情報は更新されました。</li>
+          <li>
+            新しい駅：<var>板塘</var>、<var>谷山</var>、<var>観沙嶺</var>、<var>懐柔北</var>、<var>荆門</var>、<var>深圳</var>、<var>先鋒</var>、<var>昭通</var>。<var>仲愷</var>
+            駅の情報は更新されました。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -100,7 +115,9 @@
         <li class="list-group-item">
           2022-07-03(v3.4.3)
           <ul>
-            <li>新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>鄭州航空港</var>。</li>
+          <li>
+            新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>鄭州航空港</var>。
+          </li>
             <li>一部駅の情報を調整。</li>
             <li>一部データの失効原因を明らかにした。</li>
           </ul>
@@ -232,7 +249,9 @@
             <li>学業の為、一部のデータは今回の更新で発表されていません。それらは次回の更新で発表されます。</li>
             <li>イメージは記録ごとに対応できる。</li>
             <li>自動転写と翻訳を更新。</li>
-            <li>新しい駅：<var>大同南</var>、<var>代県</var>、<var>岱岳</var>、<var>古田</var>、<var>河口北</var>、<var>建水</var>、<var>锦州</var>、<var>涞源</var>、<var>灵丘</var>、<var>牛栏山</var>、<var>朔州</var>、<var>随州</var>、<var>叶柏寿</var>、<var>原平</var></li>
+          <li>
+            新しい駅：<var>大同南</var>、<var>代県</var>、<var>岱岳</var>、<var>古田</var>、<var>河口北</var>、<var>建水</var>、<var>锦州</var>、<var>涞源</var>、<var>灵丘</var>、<var>牛栏山</var>、<var>朔州</var>、<var>随州</var>、<var>叶柏寿</var>、<var>原平</var>
+          </li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -245,7 +264,9 @@
         <li class="list-group-item">
           2021-09-23(v3.0.7)
           <ul>
-            <li>新しい駅：<var>大板</var>、<var>定州東</var>、<var>贛榆</var>、<var>林東</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通遼</var>、<var>宣化</var>、<var>宣化北</var></li>
+          <li>
+            新しい駅：<var>大板</var>、<var>定州東</var>、<var>贛榆</var>、<var>林東</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通遼</var>、<var>宣化</var>、<var>宣化北</var>
+          </li>
             <li>最近の二回の更新以来作った「新しい駅」にマークを付けています。</li>
           </ul>
         </li>
@@ -296,7 +317,9 @@
             <li>新版、正式的に発表</li>
             <li>新しい日本語翻訳</li>
             <li>文案を翻訳易いになる為に調整</li>
-            <li>新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承徳南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏爾旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var></li>
+          <li>
+            新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承徳南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏爾旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var>
+          </li>
             <li>記録した駅は537個、機器は1364個。</li>
           </ul>
         </li>
@@ -320,7 +343,9 @@
         <li class="list-group-item">
           2021-07-08(v3.0.0-alpha)
           <ul>
-            <li>新しい駅：<var>大連</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太倉</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var></li>
+          <li>
+            新しい駅：<var>大連</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太倉</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var>
+          </li>
             <li>新しい仮想駅：<var>鄭州客運段</var></li>
             <li>新しい駅組：<var>合福高速線(線路)</var>、<var>金温貨線(線路)</var>、<var>金温線(線路)</var></li>
             <li>勋章展示、车站客貨運标志功能</li>
@@ -369,7 +394,9 @@
           2021-05-20(v2.3.9)
           <ul>
             <li>「卒業季」ですから、更新頻度はやや下がった。</li>
-            <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
+          <li>
+            新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
+          </li>
             <li>车站总数达到499个，机器数量1263台。</li>
           </ul>
         </li>
@@ -382,7 +409,9 @@
         <li class="list-group-item">
           2021-05-04(v2.3.7)
           <ul>
-            <li>新しい駅：<var>北京大兴</var>、<var>古交</var>、<var>菏泽</var>、<var>黄村</var>、<var>黄山</var>、<var>聊城</var>、<var>灵石</var>、<var>庐江</var>、<var>庐江西</var>、<var>平遥</var>、<var>芜湖</var>、<var>延吉西</var></li>
+          <li>
+            新しい駅：<var>北京大兴</var>、<var>古交</var>、<var>菏泽</var>、<var>黄村</var>、<var>黄山</var>、<var>聊城</var>、<var>灵石</var>、<var>庐江</var>、<var>庐江西</var>、<var>平遥</var>、<var>芜湖</var>、<var>延吉西</var>
+          </li>
             <li>部分数据仍待录入。</li>
           </ul>
         </li>
@@ -390,7 +419,9 @@
           2021-04-26(v2.3.6)
           <ul>
             <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
-            <li>新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var></li>
+          <li>
+            新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var>
+          </li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -467,7 +498,9 @@
         </li>
         <li class="list-group-item">
           2021-03-02(Version 2021-02-28, v2.2.1):
-          <ul><li>新しい駅：大港南、当阳、阜阳</li></ul>
+        <ul>
+          <li>新しい駅：大港南、当阳、阜阳</li>
+        </ul>
         </li>
         <li class="list-group-item">
           2021-02-18(v2.2.0pre OR v2.1.3):
@@ -536,10 +569,12 @@
           2020-05-10: 初公開のリリース。
         </li>
       </ul>
-    </div>
+    </article>
+  <div class="container my-2">
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="./img/ccbync.png"></a><br>この作品は<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">クリエイティブ・コモンズ表示 - 非営利 4.0 国際ライセンス</a>の下に提供されています。
   </div>
-  <footer class="container">
-    <small class="text-muted">文中各商标为对应公司的資产。</small>
+  <footer class="container my-2">
+    <small class="text-muted">文中各商標は各所属会社の資産です。</small>
   </footer>
 </body>
 
